<resources>
    <string name="app_name">TrickyDex</string>
    <string name="trickydex">TrickyDex</string>
    <string name="connect_login">Connect to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_account">Create account</string>
    <string name="register">REGISTER</string>
    <string name="back_button">back button</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="_20">20%</string>
    <string name="_030_150">030/150</string>
    <string name="progression">Progression:</string>
    <string name="airs">Airs</string>
    <string name="slides">Slides</string>
    <string name="_010_020">010/020</string>
    <string name="_50">50%</string>
    <string name="grabs">Grabs</string>
    <string name="_001_008">001/008</string>
    <string name="_83">83%</string>
    <string name="trick_list">Trick List</string>
    <string name="_05_030">05/030</string>
    <string name="_12">12%</string>
    <string name="user_pic">user_pic</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset">Reset</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="manage_trick">Manage trick</string>
    <string name="trick_name">Trick name</string>
    <string name="validate_trick">Validate trick</string>
    <string name="tricks_information">tricks\' information</string>
    <string name="difficulty">Difficulty</string>
    <string name="title_activity_test">test</string>
    <string name="add_button">add_button</string>
    <string name="update_trick">Update trick</string>
    <string name="admin">Admin</string>
    <string name="remember_me">Remember me</string>
    <string name="select_view">Select View</string>
    <string name="delete_trick">DELETE TRICK</string>
</resources>