<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdminActivity">

    <ImageView
        android:id="@+id/backButtonAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/greyLogo"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageView
        android:id="@+id/imageViewProfileAdmin"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/user_pic"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight5"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:srcCompat="@drawable/user_empty" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/trickydex"
        android:textColor="@color/blue_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/backButtonAdmin"
        app:layout_constraintStart_toEndOf="@+id/backButtonAdmin"
        app:layout_constraintTop_toTopOf="@+id/backButtonAdmin" />

    <TextView
        android:id="@+id/textViewAccount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/account"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight5"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAdminWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft5"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccount2" />

    <Button
        android:id="@+id/buttonAddTrick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/button_login"
        android:elevation="3dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/manage_trick"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight5"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft5"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdminWelcome" />

</androidx.constraintlayout.widget.ConstraintLayout>