<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <TextView
        android:id="@+id/textTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/trickydex"
        android:textColor="@color/blue_title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/textConnect3"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="?attr/colorLoginText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight3"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft3"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2" />

    <EditText
        android:id="@+id/editTextEmailForgotPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/text_input_round_corner"

        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:shadowRadius="4"
        android:textColor="@color/black"
        android:textColorHighlight="@android:color/transparent"
        android:textColorHint="#656565"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight3"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft3"
        app:layout_constraintTop_toBottomOf="@+id/textConnect3" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/button_register"
        android:elevation="3dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight3"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft3"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailForgotPassword" />

    <ImageView
        android:id="@+id/backButtonForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/greyLogo"
        android:contentDescription="@string/back_button"
        app:layout_constraintBottom_toBottomOf="@+id/textTitle2"
        app:layout_constraintEnd_toStartOf="@+id/textTitle2"
        app:layout_constraintStart_toStartOf="@+id/guidelineTitle2"
        app:layout_constraintTop_toTopOf="@+id/textTitle2"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ProgressBar
        android:id="@+id/progressBarForgotPassword"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>